[package]
name = "mysql-http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "2.0.1", features = ["tokio"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
serde_json = "1.0.117"